include category routes,handlers and docs
